--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
-.myClass{
-    background: #727272;
+body, html{
+    margin: 0;
+    padding: 0;
+    background: #525252;
+}
+
+button{
+    padding: 10px 20px;
+    border-radius: 8px;
+    margin: 15px;    
 }
 
 .block{
+    z-index: 100;
     position: absolute;
     width: 100px;
     height: 100px;
@@ -12,4 +21,9 @@
     margin-top: -50px;
     margin-left: -50px;
     transition: all 0.7s;
+}
+
+canvas{
+    width: 90vw;
+    position: absolute;    
 }
